--- a/build.default.properties
+++ b/build.default.properties
@@ -1,22 +1,9 @@
-#######################################
-# CREATE build.properties
-# transfer.live.keyfile = E:/PATH/TOYOUR/key
-# transfer.dev.keyfile = E:/PATH/TOYOUR/key
-#
-# Download Antform http://sourceforge.net/projects/antforms/files/latest/download?source=files
-# Preferences => Ant => Runtime => Global Entries -> Add Jar
-#######################################
+vagrant.cmd = cmd 
+vagrant.path = /c
 
-# http://www.XXX.de
-transfer.live.user = XXX
-transfer.live.server = XXX
-transfer.live.path = XXX
-transfer.live.cache = XXX
-transfer.live.keyfile =
-
-# http://dev.kangabox.de
-transfer.dev.user = XXX
-transfer.dev.server = XXX
-transfer.dev.path = XXX
-transfer.dev.cache = XXX
-transfer.dev.keyfile =
+transfer.user = root
+transfer.password = vagrant
+transfer.server = localhost
+transfer.port = 2222
+transfer.path = /var/www/magento-1.7.0.2
+transfer.cache = magento-1.7.0.2
