--- a/.vagrant/Vagrantfile
+++ b/.vagrant/Vagrantfile
@@ -7,5 +7,5 @@ Vagrant::Config.run do |config|
         config.vm.forward_port 80, 8080, :auto => true
         config.vm.share_folder "vagrant", "/opt/vagrant/", "../.vagrant/"
         config.vm.customize ["modifyvm", :id, "--memory", 2048]
-        config.vm.customize ["modifyvm", :id, "--name", "Magento-FeltInLoveWithVagrant"]
+        config.vm.customize ["modifyvm", :id, "--name", "Magento-SocialCommerce"]
 end
